--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -10,7 +10,8 @@
 \thispagestyle{empty}% suppress header for this page
 % title
 %\frontmatter
-{\noindent Version 0.1 DRAFT}
+%\svnfooter
+%%%{\noindent Version:  \svnrev ;\svndate ;\svnauthor}
 \topskip0pt
 \vspace*{\fill}
 \begin{fullwidth}
