--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -1,1 +1,37 @@
-This is a citation test~\cite{dijetHarris}.
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id$}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyhead[ol]{\svnrev;\svndate;\svnauthor}
+
+This document presents recommendations for
+the MC production and parameter scans
+for the various simplified models.
+
+What is the motivation for this report?
+
+First, the physics is compelling.   Measurements at the energy
+frontier can make quantitative statements about dark matter.
+
+Second, in Run-1 at the LHC, there was confusion in the community
+over the interpretation of the data.
+
+Third, there are reasons to strive for uniformity in interpretation
+in the different experiments.  This will ultimately aid in the
+combination of data, but also facilitates cross checks of results.
+
+What is the format of this report?
+
+First, it describes the signatures and models of interest for
+dark matter searches.
+
+Secondly, it provides information on the tools to be used to
+simulate signals.
+
+Finally, it makes a recommendation on a scan of parameters within
+those models based on supporting material.
+
