--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -1,3 +1,10 @@
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id$}
+
 General topics:
 \begin{itemize}
  \item choice of Dark Matter type: Dirac (unless specified otherwise) and what we might be missing
